# scarper

./: .gitignore  .replit  README.md  app.py  free.py  login.py  multi_platform.py  pyproject.toml  render-build.sh  replit.md  requirements.txt  scraper.py
chrome_profile/: Local State  first_party_sets.db
chrome_profile/Default/: Account Web Data  AccountBookmarks  Affiliation Database  Bookmarks  Bookmarks.bak  BrowsingTopicsState  DIPS  Favicons  Login Data  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Shortcuts  Top Sites  Web Data  passkey_enclave_state  trusted_vault.pb
chrome_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  f_000024  f_000025  f_000026  (+2 more)
chrome_profile/GraphiteDawnCache/: data_1  index
chrome_profile/Safe Browsing/: ChromeExtMalware.store  ChromeExtMalware.store.32_13412232695678512  UrlBilling.store  UrlBilling.store.4_13411825344950197  UrlBilling.store.4_13412232695687904  UrlCsdAllowlist.store  UrlCsdAllowlist.store.4_13412232695689541  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlHighConfidenceAllowlist.store.32_13411824559481226  UrlHighConfidenceAllowlist.store.32_13412232695665101  UrlMalBin.store  UrlMalBin.store.4_13411825344948961  UrlUws.store  (+11 more)
(+2045 files in other folders)
