[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fake-useragent>=2.2.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
]
